@@ -45,6 +45,10 @@ Report on the \fBdebsnap\fP configuration being used and progress during the
 download operation.  Please always use this option when reporting bugs.
 
 .TP
+.BR \-\-list
+Don't dwnload but just list versions.
+
+.TP
 .BR \-\-binary
 Download binary packages instead of source packages.
 
